# SKN28-1st-4team

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
be/: .build_env  .dockerignore  .env.example  .env.sample  .run_env  Dockerfile  README.md  pyproject.toml
be/src/: app.py  predict_engine_pb2_grpc.py
be/src/env/: __init__.py  _utils.py  settings.py
be/src/observability/: __init__.py
be/src/observability/logger/: logger.py
be/src/services/: __init__.py  ai_agent.py  frontend_price_factors.py  frontend_price_prediction.py  predict_engine.py  vehicle_model_image.py
be/src/sql_commands/: __init__.py  vehicle_model_image.py
be/tests/: conftest.py
be/tests/integration/services/: test_ai_agent_live.py
be/tests/unit/services/: test_ai_agent.py  test_vehicle_model_image.py
data_collection/: pyproject.toml
data_collection/brand_model_trim_category_mapping/: BMTaddCAT_validation.ipynb
data_collection/brand_model_trim_category_mapping/BMTaddCAT/: config.py
data_collection/clean/: clean_process.ipynb  pre_check_launch_price.ipynb  sanitize_process.ipynb  training_ready_process.ipynb
data_collection/clean/original_source/: BMT_launchprice.csv  detail_pages.json
data_collection/clean/output/: detail_pages_flattened_raw.csv  detail_pages_sanitized.csv  detail_pages_training_ready.csv  prepared_training_1.csv
data_collection/cohort_score_calculator/: bmt2score_sanity_check.ipynb
data_collection/cohort_score_calculator/BMT2Score/: store.py
data_collection/cohort_score_calculator/BMT2Score/data/: scored_tuples.csv
data_collection/name_brand_model_trim_mapping/: .env.example  Readmd.md  module_development.ipynb
data_collection/name_brand_model_trim_mapping/string2BMT/: __init__.py  agent_client.py  config.py  normalizer.py  prompt.md  prompt.py  reference.py  schemas.py
data_collection/raw/: search_scope.csv
data_collection/raw/models_cohort/: README.md
data_collection/raw/models_cohort/cohort_generation/: .env.example  README.md  brand_model_trim_reference.ipynb  feature_engineering.ipynb  model_group_manual.ipynb
data_collection/raw/models_cohort/original_source/: README.md  collect_sources.py  export_source_subsets.py  extract_vehicle_lake.py  model_source_index.py  parse_price_pdfs.py  profile_vehicle_lake.py  run.py  source_registry.py
data_collection/raw/page_urls/: ralph_prompt.md
data_collection/scripts/: __init__.py  nordvpn_connect_country.applescript  vpn_switcher.py
data_collection/src/: .gitignore  README.md  main.ipynb  main.py  shallow_only.ipynb  vpn_test.ipynb
data_collection/src/loader/: __init__.py
data_collection/src/loader/crawl/: README.md  (+6 more)
data_collection/tests/cohort_score_calculator/: test_bmt2score.py
predict_engine_host/: .env.sample  Dockerfile  README.md  pyproject.toml
predict_engine_host/src/: app.py  grpc_server.py  model_runtime.py  predict_engine_pb2.py  settings.py
predict_engine_research/: .env.example  .gitignore  README.md  pyproject.toml
predict_engine_research/data/: export_color_options.py  prepared_training.csv
predict_engine_research/src/: env_test.py  main.ipynb  main.py  test.ipynb
predict_engine_research/src/envs/: __init__.py  loader.py
predict_engine_research/src/models/: __init__.py  config.py  regressor.py
predict_engine_research/src/runtime/: __init__.py  device.py
predict_engine_research/src/tracking/: __init__.py  logger.py  wandb_tracker.py
predict_engine_research/src/wandb/: latest-run
(+98 files in other folders)
