[project]
name = "be"
version = "0.1.0"
description = "FastAPI backend app for the monorepo"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "grpcio>=1.78.0",
    "protobuf>=6.33.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast tests that isolate a single component",
    "integration: tests that exercise real infrastructure boundaries",
]
