[project]
name = "be"
version = "0.1.0"
description = "FastAPI backend app for the monorepo"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast tests that isolate a single component",
    "integration: tests that exercise real infrastructure boundaries",
]
