[project]
name = "data-collection"
version = "0.1.0"
description = "Data collection and cleaning project for the monorepo"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "pypdf>=6.8.0",
]
