[project]
name = "data-collection"
version = "0.1.0"
description = "Data collection and cleaning project for the monorepo"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "openai-agents>=0.12.3",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
]
