[project]
name = "predict-engine-host"
version = "0.1.0"
description = "ONNX model hosting service project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "grpcio>=1.78.0",
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.3",
    "protobuf>=6.33.5",
    "uvicorn>=0.41.0",
]
