[project]
name = "predict-engine-research"
version = "0.1.0"
description = "Model research and training project with PyTorch tooling"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "onnx>=1.20.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
